RESOLVED FIXED206297
WebKit should not expose a unprefixed CGRectValue category method on NSValue
https://bugs.webkit.org/show_bug.cgi?id=206297
Summary WebKit should not expose a unprefixed CGRectValue category method on NSValue
Tim Horton
Reported 2020-01-15 10:53:54 PST
WebKit should not expose a unprefixed CGRectValue category method on NSValue
Attachments
Patch (1.20 KB, patch)
2020-01-15 10:54 PST, Tim Horton
no flags
Patch (1.51 KB, patch)
2020-01-15 11:04 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-01-15 10:54:33 PST
Tim Horton
Comment 2 2020-01-15 10:54:35 PST
Tim Horton
Comment 3 2020-01-15 11:04:42 PST
WebKit Commit Bot
Comment 4 2020-01-15 16:56:28 PST
Comment on attachment 387805 [details] Patch Clearing flags on attachment: 387805 Committed r254655: <https://trac.webkit.org/changeset/254655>
WebKit Commit Bot
Comment 5 2020-01-15 16:56:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.