WebKit should not expose a unprefixed CGRectValue category method on NSValue https://bugs.webkit.org/show_bug.cgi?id=206297 <rdar://problem/58592554>

Reviewed by Wenson Hsieh.

* WebView/WebPDFViewPlaceholder.mm:
(-[NSValue CGRectValue]): Deleted.


Canonical link: https://commits.webkit.org/219407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254655 268f45cc-cd09-0410-ab3c-d52691b4dbfc